--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "t-pot-to-netcatdb",
+  "name": "t-pot-to-sniffcat",
   "version": "0.1.0",
-  "description": "",
-  "homepage": "https://github.com/sefinek/T-Pot-To-NetCatDB#readme",
+  "homepage": "https://github.com/sefinek/T-Pot-To-SniffCat#readme",
   "bugs": {
-    "url": "https://github.com/sefinek/T-Pot-To-NetCatDB/issues"
+    "url": "https://github.com/sefinek/T-Pot-To-SniffCat/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sefinek/T-Pot-To-NetCatDB.git"
+    "url": "git+https://github.com/sefinek/T-Pot-To-SniffCat.git"
   },
   "license": "GPL-3.0",
   "author": "Sefinek <contact@sefinek.net> (https://sefinek.net)",
@@ -20,14 +19,21 @@
     "up": "ncu -u && npm install && npm update && npm audit fix"
   },
   "dependencies": {
-    "axios": "^1.8.4",
+    "@logdna/tail-file": "^4.0.2",
+    "axios": "^1.10.0",
+    "axios-retry": "^4.5.0",
     "chokidar": "^4.0.3",
-    "cron": "^4.1.3",
-    "form-data": "^4.0.2",
-    "ipaddr.js": "^2.2.0"
+    "cron": "^4.3.1",
+    "csv-parse": "^5.6.0",
+    "csv-stringify": "^6.5.2",
+    "form-data": "^4.0.3",
+    "ipaddr.js": "^2.2.0",
+    "semver": "^7.7.2",
+    "split2": "^4.2.0",
+    "ufw-log-parser": "^0.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.23.0",
-    "globals": "^16.0.0"
+    "@eslint/js": "^9.30.0",
+    "globals": "^16.2.0"
   }
 }
