--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "sync": "git pull --recurse-submodules",
+    "pull": "git pull --recurse-submodules && pm2 restart tpot-sniffcat",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "up": "ncu -u && npm install && npm update && npm audit fix"
+    "up": "ncu -u && npm install && npm update && npm audit fix",
+    "update": "git pull --recurse-submodules && npm install --omit=dev && pm2 restart tpot-sniffcat"
   },
   "dependencies": {
     "@logdna/tail-file": "^4.0.2",
