--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "form-data": "^4.0.3",
     "ipaddr.js": "^2.2.0",
     "semver": "^7.7.2",
+    "simple-git": "^3.28.0",
     "split2": "^4.2.0",
     "ufw-log-parser": "^0.1.0"
   },
