--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "t-pot-to-sniffcat",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "homepage": "https://github.com/sefinek/T-Pot-To-SniffCat#readme",
   "bugs": {
     "url": "https://github.com/sefinek/T-Pot-To-SniffCat/issues"
@@ -22,7 +22,6 @@
   "dependencies": {
     "@logdna/tail-file": "^4.0.2",
     "axios": "^1.13.6",
-    "axios-retry": "^4.5.0",
     "cron": "^4.4.0",
     "csv-parse": "^6.1.0",
     "csv-stringify": "^6.6.0",
@@ -34,6 +33,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
-    "globals": "^17.3.0"
+    "globals": "^17.4.0"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
